* Add window tab for exception states

Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Add actual quantity on line
* Add return wizard
* Add employee on purchases for some states
* Add contact and invoice party on purchase

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Add customer code for supplier on party

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Remove purchase fields from stock move
* Remove starting wildcard when searching on codes and numbers
* Allow product supplier to be defined on variants

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Add configured delay for processing purchase
* Allow to reset to draft confirmed but not processed purchase
* Show number and reference in purchase rec_name
* Remove support for Python 2.7
* Invoice purchased product instead of received product
* Prevent delete lines if purchase is not draft or canceled
* Use today as fallback for purchase date report

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Check pending purchase to erase party
* Add wizard to modify purchase header after filling lines
* Make description on purchase line optional
* Add product supplier on purchase line
* Invoice received product instead of purchased product

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Do not plan backorder moves
* Add cron task to process confirmed purchase
* Add report_address property on purchase

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add purchase price on product view from line
* Allow to edit delivery date on purchase line

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Manage readonly state on Purchase Line
* Allow purchase without payment term

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Rename Purchase reference into number and supplier reference into reference